--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "build": "vinxi build",
     "serve": "vite preview",
     "test": "vitest run",
-    "format": "biome format",
-    "lint": "biome lint",
-    "check": "biome check",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "check-types": "tsc --noEmit",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
@@ -47,7 +46,6 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/pg": "^8.15.4",
@@ -56,6 +54,8 @@
     "@vitejs/plugin-react": "^4.3.4",
     "drizzle-kit": "^0.31.1",
     "jsdom": "^26.0.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
