--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@tanstack/react-router-with-query": "^1.114.3",
     "@tanstack/react-start": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.35.0",
     "ai": "^4.3.16",
     "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
