--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.513.0",
+    "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "^19.0.0",
