--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.513.0",
     "nanoid": "^5.1.5",
