--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ai-sdk/openai": "^1.3.22",
     "@auth/core": "0.37.0",
     "@convex-dev/auth": "^0.0.87",
+    "@convex-dev/react-query": "^0.0.0-alpha.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -28,6 +29,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.80.7",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
