--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@convex-dev/auth": "^0.0.87",
     "@convex-dev/react-query": "^0.0.0-alpha.11",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
