--- a/package.json
+++ b/package.json
@@ -1,43 +1,33 @@
 {
-  "name": "speed-chat",
+  "name": "speedchat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "convex:dev": "convex dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit"
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.22",
-    "@auth/core": "0.37.0",
-    "@convex-dev/auth": "^0.0.87",
+    "@clerk/nextjs": "^6.23.0",
     "@openrouter/ai-sdk-provider": "^0.7.2",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-tooltip": "^1.2.7",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.24.8",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.515.0",
-    "next": "15.3.3",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
+    "lucide-react": "^0.522.0",
+    "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
@@ -46,7 +36,6 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remove-markdown": "^0.6.2",
-    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -55,12 +44,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "@types/remove-markdown": "^0.3.4",
+    "drizzle-kit": "^0.31.2",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
+    "eslint-config-next": "15.3.4",
+    "prettier": "^3.6.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
