--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.522.0",
-    "next": "15.3.4",
+    "next": "15.4.0-canary.94",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
