--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.81.2",
     "ai": "^4.3.16",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "better-auth": "^1.2.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,6 +40,7 @@
     "drizzle-orm": "^0.44.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.522.0",
+    "motion": "^12.19.1",
     "next": "15.4.0-canary.94",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
@@ -51,6 +53,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remove-markdown": "^0.6.2",
+    "shiki": "^3.7.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67",
