--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/ui-utils": "^1.2.11",
     "@openrouter/ai-sdk-provider": "^0.7.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -30,6 +31,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.81.2",
+    "@uploadthing/react": "^7.3.2",
     "ai": "^4.3.16",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "better-auth": "^1.2.10",
@@ -56,6 +58,7 @@
     "shiki": "^3.7.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
+    "uploadthing": "^7.7.3",
     "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
