--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-shiki": "^0.7.1",
