--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
-    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-shiki": "^0.7.1",
     "rehype-katex": "^7.0.1",
@@ -60,8 +59,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
-    "zod": "^3.25.67",
-    "zustand": "^5.0.5"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
