--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/fal": "^0.1.12",
+    "@ai-sdk/google-vertex": "^2.2.26",
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/ui-utils": "^1.2.11",
