--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "exa-js": "^1.8.19",
     "katex": "^0.16.22",
     "lucide-react": "^0.522.0",
     "motion": "^12.19.1",
