--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/ui-utils": "^1.2.11",
+    "@neondatabase/serverless": "^1.0.1",
     "@openrouter/ai-sdk-provider": "^0.7.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -49,7 +50,6 @@
     "motion": "^12.19.1",
     "next": "15.4.0-canary.94",
     "next-themes": "^0.4.6",
-    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
@@ -63,6 +63,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
+    "ws": "^8.18.3",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
