--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.81.2",
     "@uploadthing/react": "^7.3.2",
     "ai": "^4.3.16",
@@ -47,7 +48,6 @@
     "exa-js": "^1.8.19",
     "katex": "^0.16.22",
     "lucide-react": "^0.522.0",
-    "motion": "^12.19.1",
     "next": "15.4.0-canary.94",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
