--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.81.2",
+    "@types/lodash": "^4.17.20",
     "@uploadthing/react": "^7.3.2",
     "ai": "^4.3.16",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
@@ -47,6 +48,7 @@
     "drizzle-orm": "^0.44.2",
     "exa-js": "^1.8.19",
     "katex": "^0.16.22",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.522.0",
     "next": "15.4.0-canary.94",
     "next-themes": "^0.4.6",
