--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.81.2",
     "@types/lodash": "^4.17.20",
@@ -49,7 +50,7 @@
     "exa-js": "^1.8.19",
     "katex": "^0.16.22",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.522.0",
+    "lucide-react": "^0.525.0",
     "next": "15.4.0-canary.94",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -65,6 +66,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
+    "use-stick-to-bottom": "^1.1.1",
     "ws": "^8.18.3",
     "zod": "^3.25.67"
   },
