added voice input support

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dropzone": "^14.3.8",
     "react-markdown": "^10.1.0",
     "react-shiki": "^0.7.1",
+    "react-speech-recognition": "^4.0.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
@@ -77,6 +78,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-speech-recognition": "^3.9.6",
     "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
