--- a/package.json
+++ b/package.json
@@ -8,16 +8,35 @@
     "build": "next build",
     "start": "next start",
     "format": "npx ultracite format",
-    "lint": "npx ultracite lint"
+    "lint": "npx ultracite lint",
+    "typecheck": "tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^1.0.3",
+    "@ai-sdk/react": "^2.0.7",
+    "@neondatabase/serverless": "^1.0.1",
+    "@orpc/client": "^1.7.10",
+    "@orpc/server": "^1.7.10",
+    "@orpc/tanstack-query": "^1.7.10",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-query": "^5.84.1",
+    "ai": "^5.0.7",
+    "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.4",
     "lucide-react": "^0.537.0",
+    "nanoid": "^5.1.5",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "ws": "^8.18.3",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
@@ -25,6 +44,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
+    "dotenv": "^17.2.1",
+    "drizzle-kit": "^0.31.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.4",
     "tailwindcss": "^4",
