chat stream router

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -12,6 +12,9 @@
       },
       "suspicious": {
         "noConsole": "off"
+      },
+      "complexity": {
+        "noExcessiveCognitiveComplexity": "off"
       }
     }
   }
