--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.84.1",
     "ai": "^5.0.7",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.4",
+    "exa-js": "^1.8.27",
     "lucide-react": "^0.537.0",
     "nanoid": "^5.1.5",
-    "next": "15.4.6",
+    "next": "15.4.2-canary.32",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
