--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "format": "npx ultracite format",
-    "lint": "npx ultracite lint",
+    "format": "pnpm dlx ultracite format",
+    "lint": "pnpm dlx ultracite lint",
     "typecheck": "tsc --noEmit",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -23,6 +23,7 @@
     "@orpc/server": "^1.7.10",
     "@orpc/tanstack-query": "^1.7.10",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.14",
@@ -30,6 +31,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.84.1",
     "ai": "^5.0.7",
@@ -40,13 +42,20 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.4",
     "exa-js": "^1.8.27",
+    "harden-react-markdown": "^1.0.2",
     "lucide-react": "^0.537.0",
     "next": "15.4.2-canary.32",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "ws": "^8.18.3",
     "zod": "^4.0.15"
   },
@@ -56,6 +65,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/ws": "^8.18.1",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
@@ -68,7 +78,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
-      "npx ultracite format"
+      "pnpm dlx ultracite format"
     ]
   }
 }
