--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@ai-sdk/gateway": "^1.0.4",
     "@ai-sdk/openai": "^2.0.10",
     "@ai-sdk/react": "^2.0.10",
-    "@auth/core": "0.37.0",
-    "@convex-dev/auth": "^0.0.88",
+    "@clerk/nextjs": "^6.30.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -33,7 +32,6 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "ai": "^5.0.10",
-    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -44,7 +42,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "nanoid": "^5.1.5",
-    "next": "15.4.0-canary.94",
+    "next": "^15.4.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
