--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 CONVEX_DEPLOYMENT=
 NEXT_PUBLIC_CONVEX_URL=
+NEXT_PUBLIC_CLERK_FRONTEND_API_URL=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 EXA_API_KEY=
