--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-hotkeys-hook": "^5.1.0",
     "react-markdown": "^10.1.0",
     "react-shiki": "^0.7.1",
     "rehype-katex": "^7.0.1",
