--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.25.4",
+    "convex-helpers": "^0.1.102",
     "date-fns": "^4.1.0",
     "exa-js": "^1.8.19",
     "katex": "^0.16.22",
