--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8",
+    "react-error-boundary": "^6.0.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-markdown": "^10.1.0",
-    "react-shiki": "^0.7.1",
+    "react-shiki": "^0.7.2",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remove-markdown": "^0.6.2",
-    "shiki": "^3.7.0",
+    "shiki": "^3.9.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
