--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 CONVEX_DEPLOYMENT=
 NEXT_PUBLIC_CONVEX_URL=
-NEXT_PUBLIC_CLERK_FRONTEND_API_URL=
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
+NEXT_PUBLIC_CONVEX_SITE_URL=
+SITE_URL=
+GOOGLE_CLIENT_ID= # set this in convex too
+GOOGLE_CLIENT_SECRET= # set this in convex too
 EXA_API_KEY=
