--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@ai-sdk/gateway": "^1.0.4",
     "@ai-sdk/openai": "^2.0.10",
     "@ai-sdk/react": "^2.0.10",
-    "@clerk/nextjs": "^6.30.1",
+    "@convex-dev/better-auth": "^0.7.13",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -32,6 +32,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "ai": "^5.0.10",
+    "better-auth": "1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
