--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "remove-markdown": "^0.6.2",
     "shiki": "^3.9.2",
     "sonner": "^2.0.7",
+    "streamdown": "^1.1.6",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.0.17"
