--- a/biome.jsonc
+++ b/biome.jsonc
@@ -24,6 +24,9 @@
       "suspicious": {
         "noConsole": "off",
         "noArrayIndexKey": "off"
+      },
+      "performance": {
+        "noNamespaceImport": "off"
       }
     }
   }
