--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "react-hotkeys-hook": "^5.1.0",
     "react-markdown": "^10.1.0",
     "react-shiki": "^0.7.2",
+    "redis": "^5.8.2",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remove-markdown": "^0.6.2",
+    "resumable-stream": "^2.2.3",
     "shiki": "^3.9.2",
     "sonner": "^2.0.7",
     "streamdown": "^1.1.6",
