trying to fix react update depth error

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 CONVEX_DEPLOYMENT=
 NEXT_PUBLIC_CONVEX_URL=
 NEXT_PUBLIC_CONVEX_SITE_URL=
+BETTER_AUTH_SECRET= # use `openssl rand -base64 32` to generate one
 SITE_URL=
 GOOGLE_CLIENT_ID= # set this in convex too
 GOOGLE_CLIENT_SECRET= # set this in convex too
